--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}<link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+     <header>
+         <h1>GEN Symfony</h1>
+         <nav>
+         <ul class="menu">
+             <li><a href="{{ path('default') }}">Acceuil</a></li>
+             <li><a href="{{ path('contact') }}">Contact</a></li>
+             <li><a href="{{ path('about') }}">A propos</a></li>
+         </ul></nav>
+         {% block header %}
+
+         {% endblock %}
+     </header>
+
+     {% block body %}
+
+     {% endblock %}
+
+     <footer>
+         {% block footer %}
+
+         {% endblock %}
+     </footer>
+
+     {% block javascripts %}{% endblock %}
     </body>
 </html>
