--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,13 @@
 
          {% endblock %}
      </header>
-
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash--{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
      {% block body %}
 
      {% endblock %}
