modif mercredi matin 10h36->10h45

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ footer p {
     text-align: center;
 }
 .birthday-help{
-    background-color: red;
+    background-color: black;
     color: white;
 }
 
