--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
          <ul class="menu">
              <li><a href="{{ path('default') }}">Acceuil</a></li>
              <li><a href="{{ path('contact') }}">Contact</a></li>
+             <li><a href="{{ path('article_index') }}">Articles</a></li>
              <li><a href="{{ path('about') }}">A propos</a></li>
          </ul></nav>
          {% block header %}
