modif mercredi matin 12h23->12h40

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -9,12 +9,12 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>{{ 'article.title' | trans }}</th>
-                <th>{{ 'article.summary' | trans }}</th>
-                <th>{{ 'article.content' | trans }}</th>
+                <th>{{ 'article.title.label' | trans }}</th>
+                <th>{{ 'article.summary.label' | trans }}</th>
+                <th>{{ 'article.content.label' | trans }}</th>
                 <th>{{ 'article.createdAt' | trans }}</th>
                 <th>{{ 'article.updatedAt' | trans }}</th>
-                <th>{{ 'article.published' | trans }}</th>
+                <th>{{ 'article.published.label' | trans }}</th>
                 <th>{{ 'article.actions' | trans }}</th>
             </tr>
         </thead>
