modif mercredi aprem 15h30 published

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,6 +5,12 @@
 {% block body %}
     <h1>Article index</h1>
 
+    <ul>
+        <li><a href="{{ path('article_list_published') }}">Lister les publiés</a></li>
+        <li><a href="{{ path('article_list_unpublished') }}">Lister les noms</a></li>
+    </ul>
+
+
     <table class="table">
         <thead>
             <tr>
