--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <h1>Edit Article</h1>
+    <h1>{{ 'article.MAJ' | trans }}</h1>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('article/_form.html.twig', ({'button_label': 'Update'}) )}}
 
-    <a href="{{ path('article_index') }}">back to list</a>
+    <a href="{{ path('article_index') }}">{{ 'article.back' | trans }}</a>
 
     {{ include('article/_delete_form.html.twig') }}
 {% endblock %}
