modif mercredi aprem 15h42 liste article publication

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -6,8 +6,8 @@
     <h1>Article index</h1>
 
     <ul>
-        <li><a href="{{ path('article_list_published') }}">Lister les publiés</a></li>
-        <li><a href="{{ path('article_list_unpublished') }}">Lister les noms</a></li>
+        <li><a href="{{ path('article_list_published') }}">{{ 'article.published.yes' | trans }}</a></li>
+        <li><a href="{{ path('article_list_unpublished') }}">{{ 'article.published.no' | trans }}</a></li>
     </ul>
 
 
