modif mercredi aprem 16h liste article publication 2

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -8,6 +8,7 @@
     <ul>
         <li><a href="{{ path('article_list_published') }}">{{ 'article.published.yes' | trans }}</a></li>
         <li><a href="{{ path('article_list_unpublished') }}">{{ 'article.published.no' | trans }}</a></li>
+        <li><a href="{{ path('article_list_last') }}">Lister les 3 derniers</a></li>
     </ul>
 
 
