--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -6,4 +6,5 @@
 
 {% block body %}
     <p>Bienvenue sur le site constitué avec Symfony</p>
+    {{ render(controller('App\\Controller\\ArticleController::latest')) }}
 {% endblock %}
