--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -16,6 +16,10 @@
                 <td>{{ article.title }}</td>
             </tr>
             <tr>
+                <th>Author</th>
+                <td>{{ article.author ? article.author.user.username : 'nc' }}</td>
+            </tr>
+            <tr>
                 <th>Summary</th>
                 <td>{{ article.summary }}</td>
             </tr>
@@ -39,8 +43,10 @@
     </table>
 
     <a href="{{ path('article_index') }}">back to list</a>
-
+{% if is_granted('EDIT',article) %}
     <a href="{{ path('article_edit', {'id': article.id}) }}">edit</a>
-
+{% endif %}
+    {% if is_granted('ROLE_ADMIN') or is_granted('DELETE',article) %}
     {{ include('article/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
