push vendredi aprem 2

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -6,6 +6,7 @@
 {% block header %}
 <ul class="menu">
     <li><a href="{{ path('admin_users') }}">Liste des utilisateurs</a></li>
+    <li><a href="{{ path('admin_liste_articles') }}">Liste des articles</a></li>
 </ul>
 {% endblock %}
 
